minio/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mi-headless
  namespace: "minio"
  labels:
    app.kubernetes.io/instance: mi
    app.kubernetes.io/name: mi
    app.kubernetes.io/version: 2024.7.16
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
    - name: minio-console
      port: 9001
      targetPort: minio-console
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: mi
    app.kubernetes.io/name: mi
---
apiVersion: v1
kind: Service
metadata:
  name: mi
  namespace: "minio"
  labels:
    app.kubernetes.io/instance: mi
    app.kubernetes.io/name: mi
    app.kubernetes.io/version: 2024.7.16
spec:
  type: ClusterIP
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
      nodePort: null
    - name: minio-console
      port: 9001
      targetPort: minio-console
      nodePort: null
  selector:
    app.kubernetes.io/instance: mi
    app.kubernetes.io/name: mi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mi
  namespace: "minio"
  labels:
    app.kubernetes.io/instance: mi
    app.kubernetes.io/name: mi
    app.kubernetes.io/version: 2024.7.16
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: mi
      app.kubernetes.io/name: mi
  serviceName: mi-headless
  replicas: 2
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mi
        app.kubernetes.io/name: mi
        app.kubernetes.io/version: 2024.7.16
      annotations:
        checksum/credentials-secret: 1f2641225725249e444342f9a17cb5038d5183dde5b00411d5aedeeac42549ba
    spec:
      
      serviceAccountName: default
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: mi
                    app.kubernetes.io/name: mi
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: minio
                    operator: In
                    values:
                      - "yes"
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: []
        sysctls: []
      containers:
        - name: minio
          image: docker.io/bitnami/minio:2024.7.16-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: minio-api
              containerPort: 9000
              protocol: TCP
            - name: minio-console
              containerPort: 9001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: minio-api
              scheme: "HTTP"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: minio-api
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/minio/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /.mc
              subPath: app-mc-dir
            - name: data-0
              mountPath: /bitnami/minio/data-0
            - name: data-1
              mountPath: /bitnami/minio/data-1
            - mountPath: /data-0
              name: data-0
            - mountPath: /data-1
              name: data-1
      volumes:
        - name: empty-dir
          emptyDir: {}
        - hostPath:
            path: /var/data-0
            type: DirectoryOrCreate
          name: data-0
        - hostPath:
            path: /var/data-1
            type: DirectoryOrCreate
          name: data-1
